feat(be): add /tools/nutrition-summary method
